--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,8 @@
 {
-    "theme": "dark",
+    "theme": "light",
     "default_dir": "C:\\Users\\Fl\u00e1vio Monteiro/Documents/Projects",
     "recent_projects": [],
-    "pomodoro_duration": 25
+    "pomodoro_duration": 25,
+    "font_size": 10,
+    "font_family": "Segoe UI"
 }
